--- a/merhaba.html
+++ b/merhaba.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <a href="http://www.google.com.tr"> Merhaba Google </a>
+<a href="http://www.facebook.com">Facebook</a>
 </body>
 </html>
